--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -294,3 +294,52 @@
   align-items: center;
   text-align: center;
 }
+.symbol-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px 0;
+}
+
+.symbol-image {
+  width: 200px;
+  height: auto;
+  border-radius: 150px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.about-dunkel {
+  text-align: center;
+  margin: 80px auto;
+  max-width: 800px;
+  padding: 20px;
+}
+
+.about-dunkel h2 {
+  font-size: 2.5rem;
+  color: white;
+  margin-bottom: 20px;
+}
+
+.dunkel-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.dunkel-item {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 15px;
+  color: white;
+  border-radius: 10px;
+  transition: transform 0.3s ease, background 0.3s ease;
+  font-size: 1.2rem;
+}
+
+.dunkel-item:hover {
+  background: rgba(104, 40, 189, 0.8);
+  transform: scale(1.05);
+}
